# Zman

./: .default_config.py  .gitignore  LICENSE  README.md  SKILLS.md  config.py  helpers.py  main.py  pyproject.toml  screenshots.sh  test.py  testing.py
dates/: date.py  date_helpers.py
src/: default_config.yaml  helpers_1.py  main.py
src/cli_zmanim/: default_config.yaml  helpers.py  main.py
src/cli_zmanim/dates/: date.py
src/dates/: date.py
