[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-zmanim"
version = "0.2.0"
description = "A simple CLI Zmanim tool powered by Hebcal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "geocoder>=1.38.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[project.scripts]
zman = "cli_zmanim.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cli_zmanim = ["*.yaml"]
